# ai_inference_benchmarks

./: Cargo.toml  README.md
benches/: bound_detect.rs  compiled_nn.rs  openvino.rs  torch.rs  tract.rs
etc/models/: fm-classifier.onnx  whistledetection.onnx  whistledetection.xml
models/bound_detect/: fieldboundary.onnx
res/: hresnet.xml
src/: dummy_model.py  lib.rs  main.rs
src/backends/: mod.rs  openvino.rs  torch.rs  tract.rs
src/models/: bound_detect.rs  mobilenetv2.rs  mod.rs  resnet18.rs
utils/: download_mobilenetv2.py  download_resnet18.py  dummy_model.py
