[package]
name = "ai_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"
image = "0.24.8"
ndarray = "0.15.6"
nshare = "0.9.0"
openvino = "0.6.0"
tract = "0.21.0"
tract-onnx = "0.21.0"

[[bench]]
name = "tract"
harness = false

[[bench]]
name = "openvino"
harness = false
